App terminada, es una app pequeña (=

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ReconocimientoDeVozDelUsuario</string>
+    <string name="titulo">Reconocimiento de Voz</string>
 </resources>
